2006-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (fdsock): Raise default SO_RCVBUF/SO_SNDBUF buffer sizes to
	the same values as on Linux.

2006-04-03  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
	(child_info_fork::alloc_stack): Move into this class.
	(child_info_fork::alloc_stack_hard_way): Ditto.
	* dcrt0.cc (child_info_fork::alloc_stack): Ditto.
	(child_info_fork::alloc_stack_hard_way): Ditto.
	(_dll_crt0): Reference alloc_stack via fork_info.

2006-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (linebuf::finish): Drop argument.  Don't check command line
	length.
	(spawn_guts): Remove wascygexec.  Check real_path.iscygexec instead.
	Accommodate change to linebuf::finish.

2006-04-03  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (sm): Delete.
	(alloc_stack_hard_way): Figure out where the stack lives here rather
	than relying on previously filled out information which has been
	invalid since 1.5.19.

2006-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (FS_IS_SAMBA_WITH_QUOTA): New define.
	(path_conv::hasgood_inode): Recognize Samba with quota support
	compiled in.
	(path_conv::is_samba): Ditto.  Fix comment to include Samba version
	numbers for later reference.

2006-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* security.h (sec_user_nih): Make sid1 argument mandatory.
	(sec_user): Ditto.

2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (wait_for_sigthread): Use the current user sid when
	setting up the signal pipe rather than relying on (eventually) the
	effective sid.

2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (child_info_fork::handle_fork): Set uid/gid in myself so
	that it can be used by subsequent startup functions.
	(dll_crt0_0): Issue a warning if DuplicateTokenEx fails and DEBUGGING.
	(dll_crt0_1): Move user_data->{resourcelocks,threadinterface}
	initialization here from dll_crt0_0.