@@ -1,3 +1,9 @@
+2006-04-05  Christopher Faylor  <cgf@timesys.com>
+
+	* dcrt0.cc (dll_crt0_0): Move user_data->{resourcelocks,threadinterface}
+	initialization here from dll_crt0_1.
+	(dll_crt0_1): See above.
+
 2006-04-04  Corinna Vinschen  <corinna@vinschen.de>
 
 	* net.cc (fdsock): Raise default SO_RCVBUF/SO_SNDBUF buffer sizes to
